potential scrollbar fix?

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
+html {
+  scrollbar-gutter: stable;
+}
+
 body{
     font-family: Arial, Helvetica, sans-serif;
     background-color: #09121b;
